# clang_libraries_companion

./: NEWS.txt  README.md  build
miscellany/examples/: CMakeLists.txt
miscellany/examples/ast_from_string/: CMakeLists.txt  demo  main.cpp
miscellany/examples/ast_matcher_10/: CMakeLists.txt  clang_utility.cpp  clang_utility.hpp  demo  main.cpp
miscellany/examples/ast_matcher_10/data/: example_1.cpp  example_10.cpp  example_11.cpp  example_11.hpp  example_13.cpp  example_15.cpp  example_16.cpp  example_17.cpp  example_18.cpp  example_19.cpp  example_2.cpp  example_3.cpp  example_4.cpp  example_5.cpp  example_6.cpp  example_7.cpp  standard_headers.cpp
miscellany/examples/ast_visitor_10/: CMakeLists.txt  demo  main.cpp  utilities.cpp  utilities.hpp
miscellany/examples/ast_visitor_10/data/: example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp
miscellany/examples/cal/: CMakeLists.txt  README.txt
miscellany/examples/cal/src/: CMakeLists.txt  utility.cpp
miscellany/examples/cmake/: FindCAL.cmake  ParseVersion.cmake  Sanitizers.cmake
miscellany/examples/dump_ast_1/: CMakeLists.txt  demo  main.cpp  run_clang_tool
miscellany/examples/dump_ast_1/data/: example_1.cpp
miscellany/examples/dump_ast_2/: AstDumper.hpp  CMakeLists.txt  TreeFormatter.cpp  clang_utility_1.hpp  demo  main.cpp
miscellany/examples/dump_ast_2/data/: example_2.cpp  example_3.cpp  example_4.cpp  example_5.cpp
miscellany/examples/dump_ast_3/: AstDumper.hpp  AstNodeCounterVisitor.hpp  CMakeLists.txt  TreeFormatter.hpp  clang_utility_1.cpp  demo  main.cpp
miscellany/examples/dump_ast_3/data/: example_1.cpp  example_2.cpp
miscellany/examples/mangle_1/: CMakeLists.txt  README.txt  demo  main.cpp
miscellany/examples/mangle_1/data/: example_1.cpp  example_2.cpp  example_3.c  example_3.cpp  example_3.h  example_3.hpp
miscellany/examples/utility/: TreeFormatter.cpp  TreeFormatter.hpp  clang_utility_1.cpp  clang_utility_1.hpp
slides/examples/: CMakeLists.txt
slides/examples/ast_consumer_1/: CMakeLists.txt  demo  main.cpp
slides/examples/ast_consumer_1/data/: hello.cpp
slides/examples/ast_matcher_0/: CMakeLists.txt  trivial.cpp
slides/examples/ast_matcher_1/: CMakeLists.txt  demo  main.cpp
slides/examples/ast_matcher_1/data/: example_1.cpp  example_2.cpp
slides/examples/ast_matcher_2/: CMakeLists.txt  demo  main.cpp  utilities2.cpp  utilities2.hpp
slides/examples/ast_matcher_2/data/: example_2.cpp  example_3.cpp
slides/examples/ast_matcher_5/: CMakeLists.txt  demo  main.cpp
slides/examples/ast_matcher_5/data/: example_1.cpp
slides/examples/ast_matcher_6/: CMakeLists.txt  README.txt  demo  main.cpp
slides/examples/ast_matcher_6/data/: example_1.cpp
slides/examples/ast_serialization_1/: CMakeLists.txt  demo  load_ast.cpp  save_ast.cpp
slides/examples/ast_serialization_1/clang-21/: load_ast.cpp
slides/examples/ast_serialization_1/data/: example_0.cpp  example_1.cpp  example_2.cpp  example_2.hpp  example_3.cpp
slides/examples/ast_visitor_1/: CMakeLists.txt  demo  main.cpp
slides/examples/ast_visitor_1/data/: simple_1.cpp
slides/examples/ast_visitor_2/: CMakeLists.txt  demo  main.cpp  utilities.cpp  utilities.hpp
slides/examples/ast_visitor_2/data/: example_1.cpp  example_2.cpp  macros_1.cpp
slides/examples/ast_visitor_3/: CMakeLists.txt  demo  main.cpp
slides/examples/ast_visitor_3/data/: example_1.cpp  example_2.cpp
slides/examples/ast_visitor_matcher_1/: CMakeLists.txt  demo  matcher.cpp  utility.hpp  visitor0.cpp  visitor1.cpp
slides/examples/ast_visitor_matcher_1/data/: example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp
slides/examples/attribute_1/: CMakeLists.txt  main.cpp
slides/examples/attribute_1/data/: example_1.cpp
slides/examples/binaries_1/: CMakeLists.txt  data.cpp  demo  getchararray.cpp  printsyminfo.cpp
slides/examples/cast_1/: CMakeLists.txt  main.cpp
slides/examples/cast_1/clang-20/: main.cpp
slides/examples/cast_1/data/: example_1.cpp  example_3.cpp
slides/examples/cfg_1/: CMakeLists.txt  demo  main.cpp
slides/examples/cfg_1/data/: example_2.cpp  example_3.cpp  example_4.cpp
slides/examples/clang_utilities/: CMakeLists.txt  utilities.cpp  utilities.hpp
slides/examples/cmake/: ClangSetup.cmake  FindFmt.cmake
slides/examples/command_line/: CMakeLists.txt  demo  main.cpp
slides/examples/command_line_0/: CMakeLists.txt  demo  main.cpp
slides/examples/compilation_database/: CMakeLists.txt  adjuster.cpp  demo  fixed.cpp  json.cpp  response.cpp  utility.cpp  utility.hpp
slides/examples/compilation_database/data/: compile_commands-rsp.json.in  compile_commands-simple.json.in  compile_commands.json  extra_options  fixed_compilation_database.txt
slides/examples/cpp/: CMakeLists.txt  class_template_1.cpp  class_template_2.cpp  function_template_1.cpp  hello.cpp  invalid_1.cpp  macros_1.cpp  simple_1.cpp  templates_1.cpp  variable_template_1.cpp  variety_1.cpp
slides/examples/cyclomatic_complexity/: CMakeLists.txt  demo  matcher.cpp  visitor.cpp
slides/examples/diagnostic_consumer/: CMakeLists.txt  demo  main.cpp
slides/examples/dump_cfg/: CMakeLists.txt  demo  main.cpp
slides/examples/dump_cfg/data/: example_1.cpp  (+3 more)
slides/examples/frontend_action/: CMakeLists.txt  demo  main.cpp
slides/examples/frontend_action_2/: CMakeLists.txt  demo  main.cpp
slides/examples/intrusiverefcntptr_1/: CMakeLists.txt  demo  main.cpp
slides/examples/liveness_analysis/: CMakeLists.txt  analyze.cpp  analyze.hpp  demo  main.cpp
slides/examples/llvm_1/: CMakeLists.txt  demo  error_1.cpp  error_1_main.cpp  expected_1.cpp  expected_1_main.cpp
slides/examples/node_visitor_1/: CMakeLists.txt  clang_info  demo  main.cpp
slides/examples/preprocessor/: CMakeLists.txt  demo  main.cpp
slides/examples/raw_tokens_1/: CMakeLists.txt  demo  main.cpp
slides/examples/scandeps_1/: CMakeLists.txt  demo  main.cpp
slides/examples/template_1/: CMakeLists.txt  demo  main.cpp
slides/examples/tokens_1/: CMakeLists.txt  demo  main.cpp
slides/examples/vfs_2/: CMakeLists.txt  demo  gcc_info  get_clang_include_dir  main.cpp
(+50 files in other folders)
